--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -21,6 +21,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   margin: 2rem 0;
+  padding: 0.3rem;
 }
 
 
@@ -44,8 +45,9 @@
 .service-btn{
   margin-top: 310px;
   font-size: 1.2rem;
-  background-color: var(--line-green);
+  background-color: #81A969;
   color: var(--white-color);
+  font-weight: 800;
   border: none;
   padding: 0.5rem 1rem;
   cursor: pointer;
@@ -55,7 +57,8 @@
 
 .service-btn:hover{
   background-color: var(--white-color);
-  color: var(--line-green);
+  color: #81A969;
+  border: 1px solid #81A969;
 }
 
 @media screen and (max-width: 768px){
